# web2app

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/scripts/: bump_version.py
.github/workflows/: publish.yml
src/web2app/: __init__.py  errors.py  requirements.txt  web2exe.py
tests/: test1.py
